# One-handed

./: ADVANCED_SPEC_TEMPLATE.md  ASSET_CATALOG.md  ASSET_DASHBOARD.md  CONTRIBUTING.md  OPPORTUNITIES.md  README.md  VISION.md  pyproject.toml  quality_gate_output.txt  readiness_report.json  results.txt  search_assets.py  search_assets_v2.py  search_results.json  technical_requirements_schema.json
.github/workflows/: asset-audit.yml
agents/: README.md  jules.json  template.json
ai-automation/customer-support-chatbots/: README.md
ai-automation/invoice-extraction/: README.md
ai-automation/knowledge-base-assistants/: README.md
ai-automation/lead-generation-agents/: README.md
ai-automation/meeting-summarization/: README.md
ai-automation/sales-assistants/: README.md
arabic-ai/arabic-datasets/: README.md
arabic-ai/arabic-educational-ai/: README.md
arabic-ai/arabic-finance-ai/: README.md
arabic-ai/arabic-legal-ai/: README.md
arabic-ai/arabic-ocr/: README.md
arabic-ai/arabic-rag/: README.md
arabic-ai/arabic-search-engines/: README.md
arabic-ai/arabic-speech-recognition/: README.md
arabic-ai/arabic-translation-systems/: README.md
arabic-ai/arabic-tts/: README.md
arabic-ai/dataset-foundation/: README.md
computer-vision/defect-detection/: README.md
computer-vision/drone-vision/: README.md
scripts/: asset_intelligence.py  augment_assets.py  quality_gate.py  readiness_audit.py  sync_assets.py  validate_foundation.py
tests/: test_agent_eval.py  test_extended_structure.py  test_structure.py  test_taxonomy.py
(+287 files in other folders)
